modules/security_group/main.tf
resource "aws_security_group" "ALB" {
  vpc_id = var.vpc_id
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
resource "aws_security_group" "backend_SG" {
   vpc_id = var.vpc_id
   ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = [aws_security_group.ALB.id]
  }
}
resource "aws_security_group" "rds_SG" {
   vpc_id = var.vpc_id
   ingress {
    from_port   = 3306
    to_port     = 3306
    protocol    = "tcp"
    cidr_blocks = [aws_security_group.backend_SG.id]
  }
}
